--- a/yes/index.html
+++ b/yes/index.html
@@ -184,7 +184,10 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 </div>
 <div id="breadcrumb">
 	<div class="wrapper">
-		<div class="breadcrumb"><a href="/">Home</a> <span class="crumbdivider">&gt;</span> <a href="/wtcsd" class="active">World Trade Center SD</a></div>	</div>
+		<div class="breadcrumb"><a href="/">Home</a> <span class="crumbdivider">&gt;</span> 
+			<!-- <a href="/wtcsd" class="active">World Trade Center SD</a> -->
+		</div>	
+	</div>
 </div>
 <div id="global-block-1">
 	<div class="globalwrapper">
@@ -249,9 +252,9 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 	<div class="globalwrapper">
 	  <h1>Achievement Challenge</h1>
 	  <div class="nocenter">
-		<p>The Achievement Challenge is a group of senior business, academic, government and civic partners that oversee World Trade Center San Diego’s (WTCSD) implementation of the Go Global San Diego trade and investment initiative. GCC members include representatives from each of WTCSD’s founding partners and leadership from some of the region’s most globally engaged companies.</p>
+		<p>The Achievement Challenge is an annual event hosted by the Youth Education Society and business, academic, government and civic partners to promote a community of learning and exploration into various fields of learning and future employment. </p>
 
-<p>The GCC advises on WTCSD programming and generates public support for the broader global strategy. This group also serves as the voice for trade and investment policy recommendations on behalf of the region.</p>
+		<p>Once a year, attendees research and design projects centered around a new field of study that they have learned about. While using applicable skills in a new field, students have the opportunity to create a unique learning experience and be exposed to a variety of new interests. </p>
 
 		</div>		
 	</div>
@@ -318,24 +321,23 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 <div class="section-2">
 	<ul>
 		<li>
-			<a href="/">EDC Home</a></li>
+			<a href="/">YES Home</a></li>
 		<li>
-			<a href="/research">Research &amp; Data</a></li>
+			<a href="/research">About Us</a></li>
 		<li>
-			<a href="/region">About the Region</a></li>
+			<a href="/region">Our Services</a></li>
 		<li>
-			<a href="/wtcsd">WTC San Diego</a></li>
+			<a href="/wtcsd">Our Economy</a></li>
 		<li>
-			<a href="/news">News &amp; Events</a></li>
+			<a href="/news">#</a></li>
 		<li>
-			<a href="/industry">Key Industries</a></li>
+			<a href="/industry">Research Center</a></li>
 		<li>
-			<a href="/get_involved">Get Involved</a></li>
+			<a href="/get_involved">News &amp; Events</a></li>
 		<li>
-			<a href="/services">Our Services</a></li>
+			<a href="/services">#</a></li>
 		<li>
-			<a href="/about">About EDC</a></li>
-<li><a href="http://www.sandiegobusiness.org/user/">Administrator</a></li>
+			<a href="/about">Get Involved</a></li>
 	</ul>
 </div>
 <div class="about-us">
