--- a/yes/index.html
+++ b/yes/index.html
@@ -2,40 +2,34 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
   <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
 	<meta name="author" content="Youth Education Society" />
 	<meta name="copyright" content="Youth Education Society" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="education, san diego, youth, youth education society, yes, nonprofit, non profit, organization, volunteer, california, high school, after school program, inspiration" /> 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="shortcut icon" href="images/yes_favicon.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="images/yes_favicon.png" type="image/x-icon" />
     <title>Education Center SD | San Diego Youth Education Society</title>
-<!-- 
-
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?e" />
-
--->
-
+	<!-- <link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?e" />-->
 	<link type="text/css" rel="stylesheet" media="all" href="modules/theme/css/style.css" />
-<!-- <link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/edc/css/jquery.fancybox.css?e" /> -->
+	<!-- <link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/edc/css/jquery.fancybox.css?e" /> -->
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,200,400italic" rel="stylesheet" type="text/css">
-<!--	
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<!--	
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="/misc/jquery.js?e"></script>
-<script type="text/javascript" src="/misc/drupal.js?e"></script>
-<script type="text/javascript" src="/sites/all/modules/panels/js/panels.js?e"></script>
-<script type="text/javascript" src="/sites/all/themes/edc/js/jquery.scrollTo-1.4.2-min.js?e"></script>
-<script type="text/javascript" src="/sites/all/themes/edc/js/jquery.localscroll-1.2.7-min.js?e"></script>
-<script type="text/javascript" src="/sites/all/themes/edc/js/jquery.hoverIntent.minified.js?e"></script>
-<script type="text/javascript" src="/sites/all/themes/edc/js/jquery.fancybox.pack.js?e"></script>
-<script type="text/javascript">
-<!--//-->
+	<script type="text/javascript" src="/misc/drupal.js?e"></script>
+	<script type="text/javascript" src="/sites/all/modules/panels/js/panels.js?e"></script>
+	<script type="text/javascript" src="/sites/all/themes/edc/js/jquery.scrollTo-1.4.2-min.js?e"></script>
+	<script type="text/javascript" src="/sites/all/themes/edc/js/jquery.localscroll-1.2.7-min.js?e"></script>
+	<script type="text/javascript" src="/sites/all/themes/edc/js/jquery.hoverIntent.minified.js?e"></script>
+	<script type="text/javascript" src="/sites/all/themes/edc/js/jquery.fancybox.pack.js?e"></script>
+	<script type="text/javascript">
+	<!--//-->
 
 	  <![CDATA[//><!--
-jQuery.extend(Drupal.settings, { "basePath": "/" });
-//--><!]]>
-</script>
+		jQuery.extend(Drupal.settings, { "basePath": "/" });
+		//--><!]]>
 	
     <script type="text/javascript" src="/twitter/jquery.tweet.js"></script>
 	<script type="text/javascript" src="/sites/all/themes/edc/js/ready.js"></script>
@@ -191,7 +185,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 </div>
 <div id="global-block-1">
 	<div class="globalwrapper">
-		<img src="images/mb_head_world-trade-center-sd-logo.png" />
+		<img src="images/mb_head_world-trade-center-sd-logo.png" alt="Youth Education Society"/>
 	</div>
 </div>
 <div class="twitterwrap">
@@ -199,7 +193,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 </div>
 <div id="global-block-3">
   <div class="globalwrapper">
-		<img src="images/mb_head_global-image1.png" />
+		<img src="images/mb_head_global-image1.png" alt="Invest in Tomorrow San Diego"/>
 		<div class="contra">
 		  <h1>Invest In Tomorrow San Diego</h1>
 		  <h2> Maximize San Diego's economic competitiveness and prosperity through youth education programs</h2>
@@ -222,7 +216,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 </div>
 <div id="global-block-5">
 	<div class="globalwrapper">
-		<img src="images/mb_head_global-image2.png" />
+		<img src="images/mb_head_global-image2.png" alt="Youth Education Society"/>
 		<br />
 		<br />
 		<div class="nocenter">
@@ -232,12 +226,12 @@ jQuery.extend(Drupal.settings, { "basePath": "/" });
 		</div>
 		<a href="http://www.sandiegobusiness.org/wtcsd/metroconnect" class="">Learn More</a>
 		<br /><br />
-		<img src="images/head_global-image3.png" />
+		<img src="images/head_global-image3.png" alt="Youth Education Society"/>
 	</div>
 </div>
 <div id="global-block-6">
 	<div class="globalwrapper">
-		<img src="images/mb_head_global-image4.png" />
+		<img src="images/mb_head_global-image4.png" alt="Roadmap to Success"/>
 		<div class="contra">
 			<h1>
 
